--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </ul>
   </nav>
 
-  <h1>Welcome To Sara Palacios Page !!g</h1>
+  <h1>Welcome To Sara Palacios Page !!</h1>
 
   <section>
     <h2>Things I Like</h2>
